--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://twitter.com/kryptodigg">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
@@ -65,7 +65,7 @@
       </li>
       <li class="list-unstyled-item">
         <a href="#">
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-telegram"></i>
         </a>
       </li>
     </ul>
