--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="https://twitter.com/kryptodigg">
+        <a href="https://twitter.com/kryptodigg" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
@@ -69,7 +69,7 @@
       </li>
       -->
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://t.me.KryptoDigg" target="_blank">
           <i class="fab fa-telegram"></i>
         </a>
       </li>
