--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </li>
       -->
       <li class="list-unstyled-item">
-        <a href="https://t.me.KryptoDigg" target="_blank">
+        <a href="https://t.me/KryptoDigg" target="_blank">
           <i class="fab fa-telegram"></i>
         </a>
       </li>
